tests-system/union-type-duplicate/output
parent      [TypeA, TypeB, TypeA]
                           ^^^^^ union-type-duplicate/test.rsl:13: error: duplicate type TypeA in union
Processed 1 model and 1 requirement file and found 1 error
